# Physical-AI---Humanoid-Robotics-book

./: .gitignore  404.html  BACKEND_URL_UPDATE.md  CLAUDE.md  COHERE_REVERT_SUMMARY.md  CONFIGURATION_COMPARISON.md  CONTRIBUTING.md  CSS_FIXES_SUMMARY.md  DARK_MODE_INPUT_FIX.md  GEMINI_CONFIGURATION.md  GEMINI_UPDATE_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MOBILE_RESPONSIVENESS_FIX.md  MVP_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RUN_NOW.md  TASKS.md  TEST_GUIDE.md  UI_STYLING_FIXES_FINAL.md  UI_UX_IMPROVEMENTS.md  docusaurus.config.ts  gemini_code_snippet.py  index.html  package-lock.json  package.json  sitemap.xml
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
assets/css/: styles.0b00cedb.css
assets/js/: 0f14b82c.4b963187.js  0f14b82c.82df9d1d.js  17896441.6eef8cca.js  1df93b7f.0aadda65.js  297f9eb0.0edc05c5.js  297f9eb0.978b007c.js  2ada4edd.0eb6695b.js  (+55 more)
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =11.3.0  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_cohere_setup.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_authentication.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  auth.py  chat.py  health.py  ingest.py  profile.py
backend/app/core/: __init__.py  config.py  middleware.py  security.py
backend/app/services/: auth.py  database.py  embeddings.py  guardrails.py  ingestion.py  llm.py  qdrant.py  rag.py
backend/app/utils/: chunking.py  validators.py
backend/docs/adr/: 001-why-qdrant.md
backend/scripts/: __init__.py  run_ingestion.py
backend/tests/api/v1/: test_auth.py  test_profile.py
backend/tests/integration/: test_auth_flow.py  test_chat_linking.py  test_guardrails.py
backend/tests/services/: test_auth.py  test_database.py  test_llm.py
digital-twin/: index.html
docs/: diagram-examples.md
humanoid-control/: index.html
intro/: index.html
isaac-sim/: index.html
markdown-page/: index.html
ros2/: index.html
vision-language-action/: index.html
(+125 files in other folders)
